[package]
name = "mc-verification-traits"
version = "0.1.0"
authors = ["MobileCoin"]
# See https://crates.io/category_slugs for valid categories
categories = ["authentication", "cryptography"]
description = "Traits for verification logic"
edition = "2021"
# See https://crates.io/keywords for the common keywords
keywords = ["security"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/verifier"
rust-version = "1.66"

[dependencies]
